<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="100dip"
	    android:text="@string/hello"
	    />
	<!-- 
	<TextView android:id="@+id/TextView02"  android:layout_width="wrap_content" android:text="@string/TOP_SPINNER_SERVER_LIST"></TextView>
	 -->
	<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/LinearLayout02" android:orientation="horizontal">
		<Spinner android:layout_height="wrap_content"
					android:layout_width="wrap_content" 
					android:id="@+id/Spinner01" 
					android:layout_marginRight="10dip"   
					android:layout_marginLeft="5dip"   
					android:layout_weight="1" 
					android:layout_marginBottom="20dip">
		</Spinner>
		<Button android:layout_weight="0" android:text="@string/Button01" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/Button01"></Button>
		
		
	</LinearLayout>
	
	<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/LinearLayout01" android:orientation="horizontal">
	
		<Button android:id="@+id/Button03" android:layout_height="wrap_content" android:text="@string/Button03" android:layout_weight="1" android:layout_width="fill_parent"></Button>
		<Button android:id="@+id/Button04" android:layout_height="wrap_content" android:text="@string/Button04" android:layout_weight="1" android:layout_width="fill_parent"></Button>
		<Button android:id="@+id/Button05" android:layout_height="wrap_content" android:text="@string/Button05" android:layout_weight="1" android:layout_width="fill_parent"></Button>

	</LinearLayout>
	<Button android:id="@+id/Button02" android:layout_marginBottom="100dip" android:layout_marginTop="35dip" android:layout_marginRight="30dip" android:layout_width="wrap_content" android:layout_gravity="right" android:layout_height="wrap_content" android:text="@string/Button02"></Button>


	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ad_main"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

	
</LinearLayout>	

</LinearLayout>
